# mandala-quicksilver

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy
.github/workflows/: rust.yml
examples/: display_mandala.rs  logo.rs  mandala.rs
src/: eeg_view.rs  lib.rs  main.rs  muse_model.rs
static/: svg_strings.txt
tests/: integration_test_create_and_draw_mandala.rs  integration_test_draw_mandala_closed.rs  integration_test_draw_mandala_open.rs  integration_test_transition_mandala.rs
